<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UiTools.Credits">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/giphy"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:text="@string/credits"
            android:gravity="center"
            android:textColor="#d2691e"
            android:id="@+id/CreditsHead"
            android:layout_marginTop="70dp"
            />

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
             android:orientation="vertical"
             android:paddingLeft="16dp"
            android:paddingRight="16dp">


             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/erick_carias"
                 android:textColor="#d2691e"
                 android:background="#000000"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="10dp"
                 android:textSize="30sp"
                 android:id="@+id/Erick"
                 />

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/akshay_gautam"
                 android:textColor="#d2691e"
                 android:background="#000000"
                 android:textSize="30sp"
                 android:layout_marginBottom="10dp"
                 android:id="@+id/Akshay"
                 />

             <TextView
                 android:id="@+id/Ivan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/ivan_medina"
                 android:textColor="#d2691e"
                 android:background="#000000"
                 android:textSize="30sp"
                 android:layout_marginBottom="10dp"/>


             <TextView
                 android:id="@+id/Moises"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/moises_pantoja"
                 android:textColor="#d2691e"
                 android:background="#000000"
                 android:textSize="30sp"
                 />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>