<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UiTools.Manual">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:text="@string/manual"
            android:gravity="center"
            android:textColor="#d2691e"
            android:id="@+id/ManualHead"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:requiresFadingEdge="vertical"
            android:fadingEdgeLength="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="27sp"
                    android:text="@string/adding_removing_elements"
                    android:textColor="#d2691e"
                    android:id="@+id/head1"
                    android:layout_marginBottom="10dp"
                    android:background="#000000" />

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#d2691e"
                    android:id="@+id/content1"
                    android:background="#000000"
                    android:layout_marginBottom="30dp"
                    android:layout_marginStart="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="27sp"
                    android:text="@string/moving_elements"
                    android:textColor="#d2691e"
                    android:id="@+id/head2"
                    android:layout_marginBottom="10dp"
                    android:background="#000000" />

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#d2691e"
                    android:id="@+id/content2"
                    android:background="#000000"
                    android:layout_marginBottom="30dp"
                    android:layout_marginStart="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="27sp"
                    android:text="@string/connecting_elements"
                    android:textColor="#d2691e"
                    android:id="@+id/head3"
                    android:layout_marginBottom="10dp"
                    android:background="#000000" />

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#d2691e"
                    android:id="@+id/content3"
                    android:background="#000000"
                    android:layout_marginBottom="30dp"
                    android:layout_marginStart="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="27sp"
                    android:text="@string/saving_loading_a_circuit"
                    android:textColor="#d2691e"
                    android:id="@+id/head4"
                    android:layout_marginBottom="10dp"
                    android:background="#000000" />

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#d2691e"
                    android:id="@+id/content4"
                    android:background="#000000"
                    android:layout_marginBottom="30dp"
                    android:layout_marginStart="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="27sp"
                    android:text="@string/running_simulations"
                    android:textColor="#d2691e"
                    android:id="@+id/head5"
                    android:layout_marginBottom="10dp"
                    android:background="#000000" />

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#d2691e"
                    android:id="@+id/content5"
                    android:background="#000000"
                    android:layout_marginBottom="30dp"
                    android:layout_marginStart="10dp" />

            </LinearLayout>
        </ScrollView>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>